Fixed text align on small screens

--- a/src/Css/GuessTheFlag/Lost.css
+++ b/src/Css/GuessTheFlag/Lost.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   margin-top: 100px;
   align-items: center;
+  text-align: center;
 }
 .lost > .desc {
   font-size: 18px;
