--- a/src/Css/WhatTimeIsIt/Won.css
+++ b/src/Css/WhatTimeIsIt/Won.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   margin-top: 100px;
   align-items: center;
+  text-align: center;
 }
 .won > .desc {
   font-size: 18px;
